--- a/src/components/weather/weather.css
+++ b/src/components/weather/weather.css
@@ -2,7 +2,7 @@
   width: 300px;
   border-radius: 8px;
   color: #fff;
-  background-color: #303841;
+  background-color: #28282B;
   margin: 20px auto 0 auto;
   padding: 0 20px 20px 20px;
 }
