--- a/src/components/forecast/forecast.css
+++ b/src/components/forecast/forecast.css
@@ -1,6 +1,10 @@
 .title {
   font-size: 23px;
   font-weight: 700;
+  color: #fff;
+  margin: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .daily-item {
@@ -21,7 +25,7 @@
 
 .daily-item .day {
   cursor: inherit;
-  color: #212121;
+  color: #28282B;
   flex: 1 1;
   font-weight: 600;
   margin-left: 15px;
@@ -62,6 +66,6 @@
 }
 
 .daily-details-grid-item label:last-child {
-  color: #212121;
+  color: #28282B;
   font-weight: 550;
 }
